--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^5.6.2
+  cloud_firestore: ^5.1.0
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.10.1
-  firebase_auth: 5.4.1
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
 
